guestbook-set/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: set-guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: set-guestbook-ui
  template:
    metadata:
      labels:
        app: set-guestbook-ui
    spec:
      restartPolicy: Always
      securityContext:
        runAsNonRoot: false
