guestbook-set/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: set-guestbook-ui
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: set-guestbook-ui
